<resources>
    <string name="app_name" translatable="false">Dicoding Stories</string>
    <string name="empty_email">E-mail can\'t empty!</string>
    <string name="invalid_password">Password must be 6 or more in length!</string>
    <string name="invalid_email">Please type a valid email!</string>
    <string name="login">Login</string>
    <string name="login_register_notice">Don\'t have an account?</string>
    <string name="login_goto_register">Create Account</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="register">Register</string>
    <string name="login_login_notice">Already have an account?</string>
    <string name="register_goto_login">Login</string>
    <string name="name">Name</string>
    <string name="empty_name">Name can\'t be empty!</string>
    <string name="taken_email">E-mail is already taken!</string>
    <string name="success">Success!</string>
    <string name="account_created">Account is successfully created!</string>
    <string name="fail">Oops!</string>
    <string name="alert_status_placeholder">Alert Status</string>
    <string name="alert_status_success">Success</string>
    <string name="alert_status_error">Error</string>
    <string name="alert_status_warning">Warning</string>
    <string name="wrong_password">Wrong password</string>
    <string name="user_not_found">User not found</string>
    <string name="dicoding_logo_desc">Dicoding Logo</string>
    <string name="stories_fail">Failed to load stories</string>
    <string name="language_placeholder">Choose language</string>
    <string name="date_time_format">LLL d, yyyy \'at\' HH:mm</string>
    <string name="new_story">Add new story</string>
    <string name="image_preview">Image Preview</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="from_gallery">From Gallery</string>
    <string name="story_description_hint">Story Description</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="new_stories_detected">New Stories</string>
    <string name="stories_upload_fail">Failed to upload story</string>
    <string name="description_empty">Description can\'t be empty!</string>
    <string name="story_image">Story\'s Image</string>
    <string name="transition_root_name">root_dest_%s</string>
    <string name="transition_image_name">img_dest_%s</string>
    <string name="image_empty">Please attach an image first!</string>
    <string name="logout">Log out</string>
    <string name="logout_prompt">Are you sure you want to log out?</string>
    <string name="retry">Retry</string>
    <string name="filter">Filter</string>
    <string name="location">Location</string>
    <string name="none">None</string>
    <string name="auto">Auto</string>
    <string name="location_manual">Select from Map</string>
    <string name="select">Select</string>
</resources>