<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.story.NewStoryFragment">

    <include
            layout="@layout/toolbar_actionbar"
            android:id="@+id/appbar"/>

    <io.github.null2264.dicodingstories.widget.button.RoundedStrokeButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="?android:attr/textColorHint"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_location"/>

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/image_preview"
            android:layout_marginVertical="16dp"
            android:background="@color/cardViewBackground"
            app:layout_constraintTop_toBottomOf="@id/btn_location"
            app:layout_constraintStart_toStartOf="@+id/btn_location"
            app:layout_constraintEnd_toEndOf="@+id/btn_location"
            app:layout_constraintBottom_toTopOf="@id/btn_camera"
            tools:layout_height="64dp"
            android:id="@+id/iv_preview"/>

    <io.github.null2264.dicodingstories.widget.button.RoundedButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_preview"
            app:layout_constraintStart_toStartOf="@id/iv_preview"
            app:layout_constraintEnd_toStartOf="@id/btn_gallery"
            app:layout_constraintBottom_toBottomOf="@id/btn_gallery"
            android:id="@+id/btn_camera"/>

    <io.github.null2264.dicodingstories.widget.button.RoundedButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/from_gallery"
            app:layout_constraintTop_toTopOf="@id/btn_camera"
            app:layout_constraintStart_toEndOf="@id/btn_camera"
            app:layout_constraintEnd_toEndOf="@id/iv_preview"
            app:layout_constraintBottom_toBottomOf="@id/btn_camera"
            android:id="@+id/btn_gallery"/>

    <io.github.null2264.dicodingstories.widget.edittext.NotEmptyEditText
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginVertical="16dp"
            android:hint="@string/story_description_hint"
            android:inputType="textMultiLine"
            android:gravity="top"
            app:layout_constraintTop_toBottomOf="@id/btn_camera"
            app:layout_constraintStart_toStartOf="@id/btn_camera"
            app:layout_constraintEnd_toEndOf="@id/btn_gallery"
            app:layout_constraintBottom_toTopOf="@id/btn_upload"
            android:id="@+id/et_desc"/>

    <io.github.null2264.dicodingstories.widget.button.LoadingButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="@+id/iv_preview"
            app:layout_constraintEnd_toEndOf="@+id/iv_preview"
            app:layout_constraintBottom_toBottomOf="parent"
            app:buttonText="@string/upload"
            tools:layout_height="48dp"
            android:id="@+id/btn_upload"/>

</androidx.constraintlayout.widget.ConstraintLayout>