<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.RegisterFragment">

    <!-- TODO(for subs2) - add functionality (popup menu) -->
    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/bg_dropdown_button"
            android:layout_marginTop="12dp"
            android:text="@string/language_placeholder"
            android:textSize="12sp"
            android:textColor="?android:attr/textColorHint"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck"
            android:id="@+id/btn_language_selector"/>

    <io.github.null2264.dicodingstories.widget.edittext.NotEmptyEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/name"
            android:singleLine="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/em_email"
            app:layout_constraintVertical_chainStyle="packed"
            app:errorMessage="@string/empty_name"
            android:id="@+id/et_name"/>

    <io.github.null2264.dicodingstories.widget.edittext.EmailEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/et_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pwd_pass"
            android:id="@+id/em_email"/>

    <io.github.null2264.dicodingstories.widget.edittext.PasswordEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/em_email"
            app:layout_constraintStart_toStartOf="@+id/em_email"
            app:layout_constraintEnd_toEndOf="@+id/em_email"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            android:id="@+id/pwd_pass"/>

    <io.github.null2264.dicodingstories.widget.button.LoadingButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            app:buttonText="@string/register"
            app:layout_constraintTop_toBottomOf="@id/pwd_pass"
            app:layout_constraintStart_toStartOf="@id/pwd_pass"
            app:layout_constraintEnd_toEndOf="@id/pwd_pass"
            app:layout_constraintBottom_toTopOf="@id/tv_login_prefix"
            tools:background="@drawable/bg_clickable_focusable_ripple"
            tools:backgroundTint="?attr/colorPrimary"
            tools:textColor="?attr/colorOnPrimary"
            android:id="@+id/btn_register"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_login_notice"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/btn_register"
            app:layout_constraintStart_toStartOf="@id/btn_register"
            app:layout_constraintEnd_toStartOf="@id/btn_login_suffix"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:id="@+id/tv_login_prefix"/>

    <io.github.null2264.dicodingstories.widget.button.TextButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="6dp"
            android:text="@string/register_goto_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_register"
            app:layout_constraintStart_toEndOf="@id/tv_login_prefix"
            app:layout_constraintEnd_toEndOf="@id/btn_register"
            android:id="@+id/btn_login_suffix"/>

</androidx.constraintlayout.widget.ConstraintLayout>