<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginFragment">

    <!-- TODO(for subs2) - add functionality (popup menu) -->
    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/bg_dropdown_button"
            android:layout_marginTop="12dp"
            android:text="@string/language_placeholder"
            android:textSize="12sp"
            android:textColor="?android:attr/textColorHint"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TouchTargetSizeCheck"
            android:id="@+id/btn_language_selector"/>

    <ImageView
            android:layout_width="260dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_dicoding_logo"
            android:contentDescription="@string/dicoding_logo_desc"
            android:layout_marginBottom="48dp"
            app:tint="?attr/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/em_email"
            app:layout_constraintVertical_chainStyle="packed"
            android:id="@+id/iv_dicoding_logo"/>

    <io.github.null2264.dicodingstories.widget.edittext.EmailEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_dicoding_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pwd_pass"
            android:id="@+id/em_email"/>

    <io.github.null2264.dicodingstories.widget.edittext.PasswordEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/em_email"
            app:layout_constraintStart_toStartOf="@id/em_email"
            app:layout_constraintEnd_toEndOf="@id/em_email"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            android:id="@+id/pwd_pass"/>

    <io.github.null2264.dicodingstories.widget.button.LoadingButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:buttonText="@string/login"
            app:layout_constraintTop_toBottomOf="@id/pwd_pass"
            app:layout_constraintStart_toStartOf="@id/pwd_pass"
            app:layout_constraintEnd_toEndOf="@id/pwd_pass"
            app:layout_constraintBottom_toTopOf="@id/tv_register_prefix"
            android:id="@+id/btn_login"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register_notice"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="@id/btn_login"
            app:layout_constraintEnd_toStartOf="@id/btn_register_suffix"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:id="@+id/tv_register_prefix"/>

    <io.github.null2264.dicodingstories.widget.button.TextButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:padding="6dp"
            android:text="@string/login_goto_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintStart_toEndOf="@id/tv_register_prefix"
            app:layout_constraintEnd_toEndOf="@id/btn_login"
            tools:textColor="@color/textButtonColor"
            android:id="@+id/btn_register_suffix"/>
</androidx.constraintlayout.widget.ConstraintLayout>